crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_large_usize_constant.rs
fn verifies_large_usize_constant() {
    let x = usize::MAX;
    //@ assert "{x} == 18446744073709551615usize"
}

fn main() {}
