crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unbound_spec_var_use.rs
fn rejects_unbound_spec_var_use() {
    //@ assert X == 0;
}

fn main() {
    rejects_unbound_spec_var_use();
}
